# desafio-tech-lead-cidadaos-vulneraveis

./: .gitignore  README.md  requirements.txt
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/api/: cache.py  config.py  main.py
backend/api/auth/: dependencies.py  jwt_validator.py
backend/api/dependencies/: database.py
backend/api/rbac/: models.py  service.py
backend/api/routers/: auth.py  chamados.py  dashboard.py  export.py  meta.py  users.py
backend/api/schemas/: auth.py  chamados.py  dashboard.py  meta.py  users.py
backend/api/services/: chamados.py  chamados_query.py  dashboard.py
backend/tests/: conftest.py  test_auth.py  test_chamados.py  test_rbac.py
docs/: bigquery_schemas.md  decisoes.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/chamados/: page.tsx
frontend/app/dashboard/: dashboard-content.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/usuarios/: page.tsx
frontend/components/: brand-logo.tsx  providers.tsx  theme-toggle.tsx
frontend/components/chamados/: chamados-view.tsx
frontend/components/dashboard/: dashboard-allocation-section.tsx  (+6 more)
frontend/hooks/: use-chamados-url-state.ts
frontend/lib/: api-client.ts  chamados-filter-utils.ts  format-data-meta.ts  pic-context.ts
pipeline/: .user.yml  README.md  dbt_project.yml  profiles.yml
pipeline/macros/: metrics.sql  pic_scope.sql
pipeline/scripts/: extract_bigquery.py  generate_schema_docs.py
pipeline/seeds/: secretaria_tipo_mapping.csv
(+33 files in other folders)
